--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "non-fungible-token-wrapper"
 version = "0.0.2"
-authors = ["Near Inc <hello@nearprotocol.com>"]
+authors = ["Luciferius <twitter.cryptosketches@gmail.com>"]
 edition = "2018"
 
 [dev-dependencies]
 anyhow = "1.0"
 near-primitives = "0.5.0"
-near-contract-standards = { path = "../../near-contract-standards" }
-near-sdk = { path = "../../near-sdk" }
+near-contract-standards = "4.0.0-pre.8"
+near-sdk = "4.0.0-pre.8"
 near-units = "0.2.0"
 serde_json = "1.0"
 tokio = { version = "1.14", features = ["full"] }
