--- a/test-token-receiver/Cargo.toml
+++ b/test-token-receiver/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "token-receiver"
 version = "0.0.1"
-authors = ["Near Inc <hello@nearprotocol.com>"]
+authors = ["Luciferius <twitter.cryptosketches@gmail.com>"]
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = { path = "../../../near-sdk" }
-near-contract-standards = { path = "../../../near-contract-standards" }
+near-sdk = "4.0.0-pre.8"
+near-contract-standards = "4.0.0-pre.8"
